First working version

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
+<div>
+  <p-selectButton [options]="stateOptions" [(ngModel)]="langValue" optionLabel="label" optionValue="value" (ngModelChange)="onLangChange()"></p-selectButton>
+</div>
 
 <router-outlet></router-outlet>
